# al-genomics-benchmark

./: .gitignore  ARCHITECTURE_DETAILS.md  EXPERIMENTS_RUNNING.md  README.md  TRAINING_STATUS.md  env.template  pyproject.toml
acquisition/: __init__.py
al_genomics/: __init__.py  acquisition.py
analysis/notebooks/: baseline_results.ipynb
data/: evaluation.ipynb  hashfrag_splits.py  k562.py  yeast.py
docs/: AL_FRAMEWORK.md
experiments/: 01_baseline_subsets.py  02_al_simulation.py
experiments/configs/: al_simulation.yaml  al_simulation_k562.yaml  baseline.yaml  baseline_k562.yaml  baseline_k562_no_early_stop.yaml  baseline_yeast.yaml  baseline_yeast_no_early_stop.yaml
models/: base.py  dream_rnn.py  training.py  training_optimized.py
scripts/: create_hashfrag_splits.py  create_k562_hashfrag_snv_pairs.py  create_k562_reference_only.py  create_yeast_test_split.py  download_data.py  evaluate_all_test_sets.py  evaluate_k562.py  evaluate_yeast.py  extract_k562_test_sets.py  launch_baseline_experiments.py  monitor_jobs.sh  plot_performance_curves.py  plot_training_curves.py  setup_hashfrag.sh
simulation/: __init__.py
tests/: test_data.py  test_models.py
